--- a/Lecture code 1/blog_post/blog/templates/real_blog_detail.html
+++ b/Lecture code 1/blog_post/blog/templates/real_blog_detail.html
@@ -8,7 +8,7 @@
             <h1 class="card-title">{{ blog.title }}</h1>
             <p class="text-muted">{{ blog.text }}</p>
 
-            {% if blog.banner_image %}
+            {% if blog.banner_image and blog.banner_image.image %}
                 <img src="{{ blog.banner_image.image.url }}" alt="{{ blog.title }}" class="img-fluid mt-3 rounded">
             {% endif %}
         </div>
@@ -17,3 +17,4 @@
     <a href="{% url 'blog_list' %}" class="btn btn-secondary mt-4">← Back to all posts</a>
 </div>
 {% endblock %}
+
